--- a/Dockerfile-redisdump
+++ b/Dockerfile-redisdump
@@ -1,5 +1,5 @@
 FROM centos:7
-RUN  yum install centos-release-scl-rh -y && \
+RUN  yum install centos-release-scl-rh gem -y && \
 yum install rh-ruby23*  -y && \
 scl  enable  rh-ruby23 bash && \
 gem install redis-dump -V
